--- a/PFD Challenge 1/wwwroot/css/telegram.css
+++ b/PFD Challenge 1/wwwroot/css/telegram.css
@@ -41,6 +41,32 @@
     border-color: #DDBE93;
 }
 
+/*Button CSS*/
+.btn a {
+    box-sizing: border-box;
+    background-color: #BA2B43;
+    border-radius: 0.6em;
+    color: white;
+    cursor: pointer;
+    /*display: flex;*/
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+
+    .btn a:hover, .btn a:focus {
+        color: #000;
+        outline: 0;
+    }
+
 /*Button 2 CSS*/
 .btn2 {
     box-sizing: border-box;
@@ -65,6 +91,42 @@
 .btn a:hover, .btn a:focus {
     color: #000;
     outline: 0;
+}
+
+/*Input CSS*/
+.input {
+    box-sizing: border-box;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 0.6em;
+    color: white;
+    cursor: pointer;
+    /*display: flex;*/
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: white;
+    font-size: 20px;
+}
+
+
+input:read-only, textarea:read-only {
+    border: 0;
+    box-shadow: none;
+    color: white;
+}
+
+textarea:read-write {
+    box-shadow: inset 1px 1px 3px #ccc;
+    border-radius: 5px;
 }
 
 table{
