--- a/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
+++ b/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
@@ -10,6 +10,13 @@
         </div>
     </div>
 </div>
-<div class="container" style="text-align:center">
-    <h2 style="color:white;">@ViewData["Message"]</h2>
-</div>
+
+<table style="text-align: center;margin-left:333px;">
+    <tr>
+        <th>
+            <div style="background-color: white; padding-top: 33px; padding-left: 42px; padding-right: 42px; padding-bottom: 33px; border-radius: 25px; margin-left: 0px; text-align: center;">
+                <h1 style="font-size:30px;">@ViewData["Message"]</h1>
+            </div>
+        </th>
+    </tr>
+</table>
