Updated design of 'Notice' message in fund transfer page

--- a/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
@@ -22,7 +22,7 @@
 <div class="container">
     @{      if (ViewData["Message"] != null)
             {
-        <div style="color:white;font-size: 20px">Notice: @ViewData["Message"]</div>
+        <div style="color: whitesmoke; font-size: 30px; padding-bottom: 20px; text-align: center; ">Notice: @ViewData["Message"]</div>
             }
 
         }
