Update layout of input box and radio button in funds transfer review page

--- a/PFD Challenge 1/wwwroot/css/futuretransfer.css
+++ b/PFD Challenge 1/wwwroot/css/futuretransfer.css
@@ -150,6 +150,24 @@ textarea:read-write {
     white-space: nowrap;
 }
 
+/* 'What you have' container for input*/
+.whatyouhave {
+    width: 300px;
+    padding: 10px;
+    margin: 0;
+    background-color: #E7625F;
+    white-space: nowrap;
+}
+
+/* 'You activity' container for input*/
+.activity {
+    width: 300px;
+    padding: 10px;
+    margin: 0;
+    background-color: #E7625F;
+    white-space: nowrap;
+}
+
 /*Alert styling for front end validation*/
 .alert {
     box-sizing: border-box;
