--- a/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
@@ -22,16 +22,16 @@
         <div class="col text-center">
             <div class="container">
                 <form>
-                    <div class="form-group" style="color: white">
+                    <div class="form-group" style="color: white;">
                         <h2><label for="balance">What you have (SGD)</label></h2>
                     </div>
                     <div class="form-group" style="color: white">
                         <div class="input" style="padding-top: 20px; padding-right: 140px; padding-left: 140px; display: inline-block;">@Html.DisplayFor(model => model.account.Balance)</div>
                     </div>
-                    <div class="form-group" style="color: white">
+                    <div class="form-group" style="color: white;">
                         <h2><label for="activity">Your activity</label></h2>
                     </div>
-                    <div class="form-group" style="color: white">
+                    <div class="form-group" style="color: white;">
                         <div class="input" style="padding-top: 20px; padding-right: 20px; padding-left: 20px; display: inline-block;">
                             @{ if (Model.transactions.Amount == 0)
                                 {
