--- a/PFD Challenge 1/Views/Home/Authentication.cshtml
+++ b/PFD Challenge 1/Views/Home/Authentication.cshtml
@@ -29,7 +29,7 @@
                                 <div class="to" style="background-color: #AA1945;font-size:20px;">Enter Code</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                                <input type="text" class="form-control" id="code" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size:25px;">
+                                <input name="Code"type="text" class="form-control" id="code" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size:25px;">
                             </div>
                         </div>
                     </div>
@@ -44,4 +44,4 @@
 
 @section Scripts{
     <script src="~/js/authentication.js"></script>
-}
+}`
