Updated layout of register user on telegram page

--- a/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
+++ b/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
@@ -20,3 +20,13 @@
         </th>
     </tr>
 </table>
+
+<table style="text-align: center;">
+    <tr>
+        <th>
+            <div>
+                <h1></h1>
+            </div>
+        </th>
+    </tr>
+</table>
