Minor edit the user interface

--- a/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransfer.cshtml
@@ -18,6 +18,9 @@
     </div>
 </div>
 <div class="container">
+    <div>
+        Greetings, @ViewData["User"]
+    </div>
     <div class="row">
         <div class="col text-center">
             <div class="container">
