--- a/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
+++ b/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
@@ -14,3 +14,6 @@
 <div style="background-color: white; padding-top: 33px; padding-left: 42px; padding-right: 42px; padding-bottom: 33px; border-radius: 25px; margin-left: 0px; text-align: center;">
     <h1 style="font-size:30px;">@ViewData["Message"]</h1>
 </div>
+<div>
+    @Html.ActionLink("Next","Index","Home")
+</div>
