--- a/PFD Challenge 1/Views/Shared/_Layout.cshtml
+++ b/PFD Challenge 1/Views/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
         </main>
     </div>
 
-    <div class="footer">
-        <img id="imgLogo" src="~/images/Home Page (after login)(1).jpeg"
-             style="width: 100%; height: 10%" />
+    <div class="footer" style="position:fixed;">
+        <img id="imgLogo" src="~/images/Footer.png"
+             style="float:left;width: 85%; height: 5% " />
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
