--- a/PFD Challenge 1/Views/Home/Index.cshtml
+++ b/PFD Challenge 1/Views/Home/Index.cshtml
@@ -7,63 +7,71 @@
     <link rel="stylesheet" href="~/css/login.css" />
 }
 
-<div class="container form" id="mainContainer2">
-    <div class="first-container">
-        <div style="text-align: center; margin-top:2%">
-            <img id="imgLogo" src="~/images/Login.jpeg"
-                 style="width: 70%" />
-            <h1 style="margin-top:2%;margin-bottom:20px">Welcome back!</h1>
-        </div>
-    </div>
-</div>
-<div class="container form">
-    <div class="row">
-        <div class="col text-center">
-            <form asp-action="Login">
-                <div class="container">
-                    <div class="form-group" style="color: white">
-                        <h2><label for="balance">Username</label></h2>
-                    </div>
-                    <div class="input" style="padding-top: 0px; padding-bottom: 0px; padding-right: 80px; padding-left: 80px; display: inline-block;">
-                        <input name="Username" type="text" placeholder="Enter Username" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;" required>
-                    </div>
-                    <div class="form-group" style="color: white">
-                        <h2><label for="balance">Password</label></h2>
-                    </div>
-                    <div class="input" style="padding-top: 0px; padding-bottom: 0px; padding-right: 80px; padding-left: 80px; display: inline-block;">
-                        <input name="password" type="password" placeholder="Enter Password" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;" required>
-                    </div>
-                </div>
-                <!-- Login Button -->
-                <div class="every" style="padding-top:20px;padding-right:250px;padding-left:250px; padding-bottom:0px; display: inline-block;">
-                    <button action="submit" onclick="document.getElementById('id01').style.display='block'" style="width:auto;display: inline-block;" class="btn2" id="login">Log In</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
-<div id="add-update-msg" style="text-align:center;">
-    <div>
-        <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_sawdagxh.json" background="transparent" speed="1" style="text-align:center; width: 600px; height: 600px;margin: auto;" loop autoplay></lottie-player>
-    </div>
-</div>
-
-<!--This is for the modal(pop-up) for webcam facial detection-->
-<div class="modal fade" id="facialRecog" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content" style="height:auto;width:auto;">
-            <div class="container">
-                <div>Please look into the camera and wait.</div>
-                <div id="livecam" class="cam">
-                    <video id="webcam" autoplay width="640" height="480"></video>
-                </div>
-                <div>Confidence: <span id="confidence"></span></div>
-
+<body>
+    <div class="container form" id="mainContainer2">
+        <div class="first-container">
+            <div style="text-align: center; margin-top:5%">
+                <img id="imgLogo" src="~/images/User Profile_Monochromatic.png"
+                     style="width: 30%" />
+            </div>
+            <div style="text-align: left; margin-top:5%; margin-left:5%">
+                <img id="imgLogo" src="~/images/Welcome toOCBC iBanking!.png"
+                     style="width: 55%" />
             </div>
         </div>
     </div>
-</div>
+    <div  style="margin-left:600px;">
+        <div class="container form">
+            <div class="row">
+                <div class="col text-center">
+                    <form asp-action="Login">
+                        <div class="container">
+                            <div class="form-group" style="color: #2D4263; font-size: 25px; font-family: 'Bowlby One SC', cursive;">
+                                <label for="balance">Username</label>
+                            </div>
+                            <div class="input" style="text-align: right; display: inline-block; border-color: #2D4263; margin-top:0px;">
+                                <input name="Username" type="text" placeholder="Enter Username" class="form-control" id="to" style="background-color: #ECDBBA; border: transparent; color: #2D4263; text-align: center;" required>
+                            </div>
+                            <div class="form-group" style="color: #2D4263; font-size: 25px; font-family: 'Bowlby One SC', cursive;">
+                                <label for="balance">Password</label>
+                            </div>
+                            <div class="input" style="display: inline-block; border-color: #2D4263; margin-top:0px;">
+                                <input name="password" type="password" placeholder="Enter Password" class="form-control" id="to" style="background-color: #ECDBBA; border: transparent; color: #2D4263; text-align: center;" required>
+                            </div>
+                        </div>
+                        <!-- Login Button -->
+                        <div class="every" style="display: inline-block;">
+                            <button action="submit" onclick="document.getElementById('id01').style.display='block'" style="width:auto;display: inline-block;" class="btn2" id="login">Log In</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="add-update-msg" style="text-align:center;">
+        <div>
+            <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_sawdagxh.json" background="transparent" speed="1" style="text-align:center; width: 600px; height: 600px;margin: auto;" loop autoplay></lottie-player>
+        </div>
+    </div>
+
+    <!--This is for the modal(pop-up) for webcam facial detection-->
+    <div class="modal fade" id="facialRecog" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content" style="height:auto;width:auto;">
+                <div class="container">
+                    <div>Please look into the camera and wait.</div>
+                    <div id="livecam" class="cam">
+                        <video id="webcam" autoplay width="640" height="480"></video>
+                    </div>
+                    <div>Confidence: <span id="confidence"></span></div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 @section Scripts{
     <script src="~/js/login.js"></script>
     <script src="https://unpkg.com/@@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
