Changed image of each pages and color of text input

--- a/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
@@ -12,7 +12,7 @@
 <div class="container" id="mainContainer2">
     <div class="first-container">
         <div style="text-align: center; margin-top:2%">
-            <img id="imgLogo" src="~/images/FutureTransferReview(4).jpg"
+            <img id="imgLogo" src="~/images/FundTransfer.png"
                  style="width: 38%" />
             <h1 style="margin-top:2%">Review Transfer</h1>
         </div>
@@ -30,7 +30,7 @@
                                 <div class="to" style="background-color: #AA1945; font-size: 20px;">To</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                                <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 25px;">
+                                <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #ECDBBA; border: transparent; color: black; text-align: center; font-size: 25px;">
                             </div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                                 <div class="transferamount" style="background-color: #AA1945; font-size: 20px;">Transfer Amount</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                                <input asp-for="TransferAmount" type="text" readonly class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 25px;">
+                                <input asp-for="TransferAmount" type="text" readonly class="form-control" id="transfer" style="background-color: #ECDBBA; border: transparent; color: black; text-align: center; font-size: 25px;">
                             </div>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                                         <div class="plannedtimeoftransfer" style="background-color: #AA1945; font-size: 25px;">Planned time of transfer</div>
                                     </div>
                                     <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 230px; padding-left: 230px; display: inline-block; font-size: 30px;">
-                                        <div style="padding-top: 10px; padding-bottom: 10px;">Immediate</div>
+                                        <div style="padding-top: 10px; padding-bottom: 10px; color: black;">Immediate</div>
                                     </div>
                                 </div>
                             </div>
