--- a/PFD Challenge 1/Views/Home/Authentication.cshtml
+++ b/PFD Challenge 1/Views/Home/Authentication.cshtml
@@ -11,9 +11,9 @@
 <div class="container" id="mainContainer2">
     <div class="first-container">
         <div style="text-align: center; margin-top:5%">
-            <img id="imgLogo" src="~/images/Authentication.jpg"
-                 style="width: 50%" />
-            <h1 style="margin-top:5%;margin-bottom:30px;">Enter your 7 digits code</h1>
+            <img id="imgLogo" src="~/images/Authentication.png"
+                 style="width: 35%" />
+            <p style="margin-top: 5%; margin-bottom: 30px; color: black; font-size: 50px; font-family: 'Staatliches', cursive; ">Enter your 7 digits code</p>
         </div>
     </div>
 </div>
@@ -24,12 +24,12 @@
             <form asp-action="Authentication" style="text-align: center">
                 <div class="container">
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                        <div class="form-group" style="color: white">
+                        <div class="form-group" style="color: black">
                             <div class="code" style="padding-top: 2px;">
-                                <div class="to" style="background-color: #AA1945;font-size:20px;">Enter Code</div>
+                                <div class="to" style="background-color: #ECDBBA; font-size: 20px;">Enter Code</div>
                             </div>
-                            <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                                <input name="Code"type="text" class="form-control" id="code" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size:25px;">
+                            <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block; border-color: #2D4263;">
+                                <input name="Code"type="text" class="form-control" id="code" style="background-color: #ECDBBA; border: transparent; color: black; text-align: center; font-size: 25px;">
                             </div>
                         </div>
                     </div>
