--- a/PFD Challenge 1/Views/Telegram/Index.cshtml
+++ b/PFD Challenge 1/Views/Telegram/Index.cshtml
@@ -11,8 +11,8 @@
 <div class="container" id="mainContainer2">
     <div class="first-container">
         <div style="text-align: center; margin-top:2%">
-            <img id="imgLogo" src="~/images/Telegram.jpeg"
-                 style="width: 45%" />
+            <img id="imgLogo" src="~/images/Telegram.png"
+                 style="width: 35%" />
             <h1 style="margin-top:2%;margin-bottom:50px;color:white;">Add Notifications for Telegram</h1>
         </div>
     </div>
