--- a/PFD Challenge 1/Views/Transaction/Index.cshtml
+++ b/PFD Challenge 1/Views/Transaction/Index.cshtml
@@ -10,8 +10,8 @@
 <div class="container" id="mainContainer2">
     <div class="first-container">
         <div style="text-align: center; margin-top:5%">
-            <img id="imgLogo" src="~/images/Transaction History(1).jpg"
-                 style="width: 50%" />
+            <img id="imgLogo" src="~/images/TransactionHistory.png"
+                 style="width: 30%" />
             <h1 style="margin-top:5%;margin-bottom:5px;">Transaction History</h1>
         </div>
     </div>
