--- a/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
+++ b/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
@@ -4,14 +4,14 @@
 <div class="container" id="mainContainer2">
     <div class="first-container">
         <div style="text-align: center; margin-top:2%">
-            <img id="imgLogo" src="~/images/Telegram.jpeg"
+            <img id="imgLogo" src="~/images/Telegram.png"
                  style="width: 45%" />
             <h1 style="margin-top:2%;margin-bottom:50px;color:white;">Notifications for Telegram</h1>
         </div>
     </div>
 </div>
 
-<div style="background-color: white; padding-top: 33px; padding-left: 42px; padding-right: 42px; padding-bottom: 33px; border-radius: 25px; margin-left: 0px; text-align: center;">
+<div style="background-color: white; padding-top: 33px; padding-left: 22px; padding-right: 22px; padding-bottom: 33px; border-radius: 25px; margin-left: 0px; text-align: center;">
     <h1 style="font-size:30px;">@ViewData["Message"]</h1>
 </div>
 <div>
