Added successful transaction message

--- a/PFD Challenge 1/Views/FundTransfer/Success.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/Success.cshtml
@@ -1,3 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Sucess Notification";
+    ViewData["Title"] = "Success Notification";
 }
+
+<div style="margin-top:2%;">
+    <img id="imgLogo" src="~/images/Success Page – 2.png"
+         style=" width: 100%; height: auto;" />
+</div>
