Added unsuccssful transaction message

--- a/PFD Challenge 1/Views/FundTransfer/Failure.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/Failure.cshtml
@@ -3,4 +3,11 @@
 }
 
 @*ViewData message is the error message*@
-@ViewData["Message"]
+<div style="text-align: center; margin-top: 2%;">
+    <h3>Reason: @ViewData["Message"]</h3>
+</div>
+
+<div style="margin-top:2%;">
+    <img id="imgLogo" src="~/images/Failure Page – 2.png"
+         style=" width: 100%; height: auto;" />
+</div>
