Change image of Fund Transfer page and text background colour

--- a/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
@@ -12,9 +12,9 @@
 <div class="container" id="mainContainer2">
     <div class="first-container">
         <div style="text-align: center; margin-top:2%">
-            <img id="imgLogo" src="~/images/FundTransferReview.png"
+            <img id="imgLogo" src="~/images/FundTransfer.png"
                  style="width: 38%" />
-            <h1 style="margin-top:2%">Transfer</h1>
+            <h1 style="margin-top:4%">Transfer</h1>
         </div>
     </div>
 </div>
