--- a/PFD Challenge 1/wwwroot/css/confirmation.css
+++ b/PFD Challenge 1/wwwroot/css/confirmation.css
@@ -99,7 +99,7 @@ textarea:read-write {
     width: 150px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -108,7 +108,7 @@ textarea:read-write {
     width: 250px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -117,7 +117,7 @@ textarea:read-write {
     width: 250px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -126,7 +126,7 @@ textarea:read-write {
     width: 150px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -135,7 +135,7 @@ textarea:read-write {
     width: 300px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
