--- a/PFD Challenge 1/wwwroot/css/futuretransfer.css
+++ b/PFD Challenge 1/wwwroot/css/futuretransfer.css
@@ -108,7 +108,7 @@ textarea:read-write {
     width: 150px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -117,7 +117,7 @@ textarea:read-write {
     width: 250px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -126,7 +126,7 @@ textarea:read-write {
     width: 250px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -135,16 +135,16 @@ textarea:read-write {
     width: 150px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
 /* 'Planned time of transfer' container for input*/
 .plannedtimeoftransfer {
-    width: 300px;
+    width: 280px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -153,7 +153,7 @@ textarea:read-write {
     width: 300px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
@@ -162,7 +162,7 @@ textarea:read-write {
     width: 300px;
     padding: 10px;
     margin: 0;
-    background-color: #E7625F;
+    background-color: #ECDBBA;
     white-space: nowrap;
 }
 
