--- a/PFD Challenge 1/Views/Shared/_NavBar.cshtml
+++ b/PFD Challenge 1/Views/Shared/_NavBar.cshtml
@@ -34,6 +34,9 @@
                     <!--Orginal version-->
                     <a class="nav-link" href="~/Transaction/index">History</a>
                 </li>
+                <li>
+                    <a class="nav-link" href="~/WindowsHello/Index">Windows Hello</a>
+                </li>
             }
             @if (Context.Session.GetString("TelegramSetUp") == "true")
             {
